overall to tags; added pages

--- a/_posts/2014-11-26-HIP.md
+++ b/_posts/2014-11-26-HIP.md
@@ -4,6 +4,7 @@ title: "The Making of a Healthy Backbone: Malawi and e-health"
 date: 2014-11-26
 external_url: https://infranavinsights.wordpress.com/2014/11/26/the-making-of-a-healthy-backbone-malawi-and-e-health/
 external_site: PUB_NAME
-categories: Carto Mapping Optic-Fiber HIP-Consult-Inc
+category: Blog Post
+tags: [Carto, Mapping, Optic-Fiber, HIP-Consult-Inc]
 ---
 Written for HIP Consult Inc, a Washington D.C. consulting firm specialized in telecommunication contracting in the Global South. This post is about the impact of fiber optic networks on healthcare services, with a focus on Malawi as a case study.
