--- a/_posts/2014-28-02-BSJ.md
+++ b/_posts/2014-28-02-BSJ.md
@@ -4,6 +4,7 @@ title: "To Know Where We Are With Geographic Information Systems is to Understan
 date: 2014-02-28
 external_url: https://bsj.berkeley.edu/to-know-where-we-are-with-geographic-information-systems-is-to-understand-who-we-are/
 external_site: PUB_NAME
-categories: GIS Think-Piece Berkeley-Scientific-Journal
+category: Blog Post
+tags: [GIS, Berkeley-Scientific-Journal]
 ---
 A short think-piece about the role of geospatial information in everyday life for the Berkeley Scientific Journal's blog.
